2013-02-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Browser.cpp:
	* TraverseType.h:
	* X3DBrowser.cpp:
	* X3DRenderer.h:
	* X3DNode.h:
	* X3DRenderer.cpp:
	* WalkViewer.h:
	* X3DNode.cpp:
	* LOD.cpp:
	* X3DBrowserContext.cpp:
	* Viewport.h:
	* Anchor.cpp:
	* Viewport.cpp:
	* Collision.h:
	* X3DShapeNode.cpp:
	* X3DLayerNode.h:
	* Billboard.cpp:
	* Collision.cpp:
	* X3DLayerNode.cpp:
	* X3DGroupingNode.cpp:
	* X3DViewpointNode.cpp:
	* ProximitySensor.cpp:
	* VisibilitySensor.cpp:
	* X3DBackgroundNode.cpp: 

2013-02-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Parser.cpp:
	* Scene.h:
	* Browser.h:
	* SFColor.cpp:
	* SFMatrix3.h:
	* SFMatrix4.h:
	* Browser.cpp:
	* X3DBaseNode.h:
	* Scene.cpp:
	* FlyViewer.h:
	* X3DViewer.h:
	* TraverseType.h:
	* NoneViewer.h:
	* X3DViewer.cpp:
	* FlyViewer.cpp:
	* X3DBrowser.cpp:
	* NoneViewer.cpp:
	* Text.h:
	* SFColorRGBA.cpp:
	* ExamineViewer.h:
	* X3DRenderer.h:
	* Text.cpp:
	* X3DRenderer.cpp:
	* ExamineViewer.cpp:
	* X3DNode.h:
	* FlyViewer.h:
	* ShapeContainer.h:
	* X3DViewer.h:
	* ViewerType.h:
	* LOD.h:
	* X3DBrowserContext.h:
	* Material.h:
	* NoneViewer.h:
	* X3DNode.cpp:
	* FlyViewer.cpp:
	* X3DViewer.cpp:
	* Switch.h:
	* BrowserApplication.h:
	* ShapeContainer.cpp:
	* Appearance.h:
	* LOD.cpp:
	* Arc2D.h:
	* X3DBrowserContext.cpp:
	* WalkViewer.cpp:
	* X3DFlyViewer.h:
	* Material.cpp:
	* NoneViewer.cpp:
	* Switch.cpp:
	* LayerSet.h:
	* Viewport.h:
	* Inline.h:
	* LineSet.h:
	* Disk2D.h:
	* ExamineViewer.h:
	* Anchor.h:
	* Appearance.cpp:
	* PointSet.h:
	* X3DShapeNode.h:
	* Arc2D.cpp:
	* Transform.h:
	* X3DFlyViewer.cpp:
	* Anchor.cpp:
	* Disk2D.cpp:
	* Circle2D.h:
	* Inline.cpp:
	* LineSet.cpp:
	* Viewport.cpp:
	* ExamineViewer.cpp:
	* LayerSet.cpp:
	* X3DShapeNode.cpp:
	* PointSet.cpp:
	* Billboard.h:
	* LineProperties.h:
	* FillProperties.h:
	* Transform.cpp:
	* FlyViewer (Kopie).h:
	* Polyline2D.h:
	* X3DLayerNode.h:
	* ProgramShader.h:
	* Circle2D.cpp: