@@ -1,5 +1,11 @@
 2013-02-27  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DRenderer.cpp:
+	* LayerSet.cpp:
+	* X3DLayerNode.cpp: 
+
+2013-02-27  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Browser.cpp:
 	* TraverseType.h:
 	* X3DBrowser.cpp:
